# filters

./: CMakeLists.txt  image_processor.cpp
Image/: color.cpp  color.h  image.cpp  image.h
Read_and_write/: constants.h  parser.cpp  parser.h  reader.cpp  reader.h  writer.cpp  writer.h
filters/: Crop.cpp  Crystallize.cpp  Crystallize.h  EdgeDetection.cpp  Grayscale.cpp  Negative.cpp  Sharpening.cpp  filters.cpp  filters.h
tests/: CMakeLists.txt  test_image_processor.cpp
